[tool.poetry]
name = "nifgen_standard_function"
version = "0.5.0"
description = "MeasurementLink example that generates a standard function waveform using an NI waveform generator."
authors = ["National Instruments"]

[tool.poetry.dependencies]
python = "^3.8"
nifgen = { version = ">=1.4.4", extras = ["grpc"] }
ni-measurementlink-service = {version = "^1.3.0-dev0", allow-prereleases = true}
click = ">=7.1.2, !=8.1.4" # mypy fails with click 8.1.4: https://github.com/pallets/click/issues/2558
grpcio = "*"

[tool.poetry.group.dev.dependencies]
mypy = ">=1.0"
grpc-stubs = "^1.53"
# Uncomment to use prerelease dependencies.
# nifgen = { git = "https://github.com/ni/nimi-python.git", subdirectory = "generated/nifgen"}
ni-measurementlink-service = {path = "../..", develop = true}

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "hightime.*",
    "nifgen.*",
]
ignore_missing_imports = true
