[tool.poetry]
name = "niscope_acquire_waveform"
version = "0.5.0"
description = "MeasurementLink example that acquires a waveform using an NI oscilloscope."
authors = ["National Instruments"]

[tool.poetry.dependencies]
python = "^3.8"
niscope = ">=1.4.3"
ni-measurementlink-service = "^1.0.0"
click = ">=7.1.2"
grpcio = "*"

[tool.poetry.group.dev.dependencies]
mypy = ">=1.0"
grpc-stubs = "^1.53"
# Uncomment to use prerelease dependencies (requires poetry>=1.2).
# niscope = { git = "https://github.com/ni/nimi-python.git", subdirectory = "generated/niscope"}
# ni-measurementlink-service = {path = "../..", develop = true}

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"

[[tool.mypy.overrides]]
module = [
    "ni_measurementlink_service.*", # TODO: remove after 1.0.2 is released with py.typed marker
    "niscope.*",
]
ignore_missing_imports = true
