[tool.poetry]
name = "niscope_acquire_waveform"
version = "0.5.0"
description = "MeasurementLink example that acquires a waveform using an NI oscilloscope."
authors = ["National Instruments"]

[tool.poetry.dependencies]
python = "^3.8"
niscope = ">=1.4.3"
ni-measurementlink-service = {version = "^1.1.0-dev2", allow-prereleases = true}
click = ">=7.1.2"
grpcio = "*"

[tool.poetry.group.dev.dependencies]
mypy = ">=1.0"
grpc-stubs = "^1.53"
# Uncomment to use prerelease dependencies (requires poetry>=1.2).
# niscope = { git = "https://github.com/ni/nimi-python.git", subdirectory = "generated/niscope"}
# TODO: Re-comment references below after we build a prerelease with enum support.
ni-measurementlink-service = {path = "../..", develop = true}

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"

[[tool.mypy.overrides]]
module = [
    "niscope.*",
]
ignore_missing_imports = true
