[tool.poetry]
name = "niscope_acquire_waveform"
version = "0.5.0"
description = "MeasurementLink example that acquires a waveform using an NI oscilloscope."
authors = ["National Instruments"]

[tool.poetry.dependencies]
python = "^3.8"
niscope = { version = ">=1.4.4", extras = ["grpc"] }
ni-measurementlink-service = {version = "^1.1.0"}
click = ">=7.1.2, !=8.1.4" # mypy fails with click 8.1.4: https://github.com/pallets/click/issues/2558
grpcio = "*"

[tool.poetry.group.dev.dependencies]
ni-python-styleguide = ">=0.4.1"
mypy = ">=1.0"
grpc-stubs = "^1.53"
# Uncomment to use prerelease dependencies.
# niscope = { git = "https://github.com/ni/nimi-python.git", subdirectory = "generated/niscope"}
# ni-measurementlink-service = {path = "../..", develop = true}

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"

[[tool.mypy.overrides]]
module = [
    "niscope.*",
]
ignore_missing_imports = true
