[tool.poetry]
name = "niswitch_control_relays"
version = "0.5.0"
description = "MeasurementLink example that controls relays using an NI relay driver (e.g. PXI-2567)."
authors = ["National Instruments"]

[tool.poetry.dependencies]
python = "^3.8"
niswitch = ">=1.4.3"
ni-measurementlink-service = "^1.0.0"
click = ">=7.1.2"
grpcio = "*"

[tool.poetry.group.dev.dependencies]
mypy = ">=1.0"
grpc-stubs = "^1.53"
# Uncomment to use prerelease dependencies (requires poetry>=1.2).
# niswitch = { git = "https://github.com/ni/nimi-python.git", subdirectory = "generated/niswitch"}
# ni-measurementlink-service = {path = "../..", develop = true}

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"

[[tool.mypy.overrides]]
module = [
    "ni_measurementlink_service.*", # TODO: remove after 1.0.2 is released with py.typed marker
    "niswitch.*",
]
ignore_missing_imports = true
