[tool.poetry]
name = "nivisa_dmm_measurement"
version = "0.5.0"
package-mode = false
description = "Measurement plug-in example that performs a DMM measurement using NI-VISA and an NI Instrument Simulator v2.0."
authors = ["National Instruments"]

[tool.poetry.dependencies]
python = "^3.9"
ni-measurement-plugin-sdk-service = {version = "^2.3.0"}
PyVISA = "^1.13.0"
PyVISA-sim = "^0.5.1"
click = ">=7.1.2, !=8.1.4" # mypy fails with click 8.1.4: https://github.com/pallets/click/issues/2558
grpcio = "*"
python-decouple = ">=3.8"

[tool.poetry.group.dev.dependencies]
ni-python-styleguide = ">=0.4.1"
mypy = ">=1.0"
grpc-stubs = "^1.53"
# Uncomment to use prerelease dependencies.
# ni-measurement-plugin-sdk-service = {path = "../../packages/service", develop = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = [
  # https://github.com/HBNetwork/python-decouple/issues/122 - Add support for type stubs
  "decouple.*",
]
ignore_missing_imports = true
