[tool.poetry]
name = "ui_progress_updates"
version = "0.5.0"
description = "MeasurementLink example that generates random numbers and updates the measurement UI to show progress."
authors = ["National Instruments"]

[tool.poetry.dependencies]
python = "^3.8"
ni-measurementlink-service = {version = "^1.1.0-dev0", allow-prereleases = true}
click = ">=7.1.2"

[tool.poetry.group.dev.dependencies]
mypy = ">=1.0"
# Uncomment to use prerelease dependencies (requires poetry>=1.2).
# ni-measurementlink-service = {path = "../..", develop = true}

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"

[[tool.mypy.overrides]]
module = [
    "grpc.*",
]
ignore_missing_imports = true
